--- a/analisis/codigos/viz.Rmd
+++ b/analisis/codigos/viz.Rmd
@@ -38,8 +38,8 @@ cat("\n")
 variables = unique(data$variable)
 variables
 
-cat("\n")
-unique(data$unidad)
+
+# data %>% distinct(variable, codigo_variable)
 ```
 
 Además, se requieren otros datasets para realizar conversiones a dolares de poder adquisitivo constante. Por lo tanto, cargamos los datos del tipo de cambio de paridad y el índice de precios al consumidor de Estados Unidos.
@@ -92,23 +92,6 @@ ggplotly(prod_crudo_plt) %>%
   layout(legend = list(
       orientation = "h",
          x = 0.1, y = -0.2) )
-
-```
-```{r}
-as.data.frame(dcast(data[ variable == "Producción de petróleo crudo", ] , 
-      anio ~ fuente, value.var = "valor"))  %>%
-  kable(caption = "Tabla 1. Producción de petróleo crudo en Argentina según distintas fuentes (barriles)",
-        knitr.kable.NA = "", booktabs = TRUE)  %>%
-  # kable_styling(bootstrap_options = c("striped"))
-  kable_styling(latex_options = "repeat_header", repeat_header_text = "Table 2 cont.")
-
-# library(htmlTable)
-# htmlTable(dcast(data[ variable == "Producción de petróleo crudo", ] , 
-#       anio ~ fuente, value.var = "valor"),
-#           # cgroup = c("Set 1:25", "Set 26:50"),
-#           # n.cgroup = c(2, 2),
-#           # rnames = FALSE
-#       )
 ```
 
 ### Producción de Gas Natural
@@ -116,7 +99,6 @@ as.data.frame(dcast(data[ variable == "Producción de petróleo crudo", ] ,
 Al igual que en la producción de petróleo crudo, la serie de largo plazo de producción de gas proviene del Anuario de Combustibles, de la cual contamos datos desde 1913 hasta 1992. A diferencia del crudo, sus valores para el período 1980-1992 no coinciden con los de EIA, pero está última sí coincide con los de Regalías entre 1999 y 2015. En cambio, la serie de SESCO, tiende a continuar la evolución de EIA y Regalías, pero con el nivel del Anuario de Combustibles, por lo que ambos pares de series pueden empalmar coherentemente según su nivel. Nuevamente, los valores de la base de Regalías son menores debido a las deducciones de producción para tributar menos regalías. La serie del Ministerio de Economía toma los valores de SESCO.Por lo tanto, el criterio de selección para la serie de producción de gas para los cálculos es el siguiente:
 
 ```{r}
-
 prod_gas_plt <-  ggplot(data[ variable == "Producción de gas natural", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
@@ -132,14 +114,6 @@ ggplotly(prod_gas_plt) %>%
   layout(legend = list(
       orientation = "h",
          x = 0.1, y = -0.2) )
-```
-```{r}
-as.data.frame(dcast(data[ variable == "Producción de gas natural", ] , 
-      anio ~ fuente, value.var = "valor"))  %>%
-  kable(caption = "abla 2. Producción de gas natural en Argentina según distintas fuentes (MMBTU)",
-        knitr.kable.NA = "", booktabs = TRUE)  %>%
-  # kable_styling(bootstrap_options = c("striped"))
-  kable_styling(latex_options = "repeat_header", repeat_header_text = "Table 2 cont.")
 ```
 
 ## Precio Mercado Interno
@@ -157,8 +131,7 @@ Sectoriales](https://www.argentina.gob.ar/economia/politicaeconomica/regionalyse
 
 
 ```{r}
-
-precio_crudo_plt <-  ggplot(data[ variable == variables[5], ],
+precio_crudo_plt <-  ggplot(data[ variable == variables[7], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
   labs(title = "Gráfico 3. Precios del mercado interno del petróleo crudo. Argentina (1963 - 2020)",
@@ -176,16 +149,12 @@ ggplotly(precio_crudo_plt)  %>%
 
 ```
 
-**Tabla 3. Precio del mercado interno del petróleo crudo en Argentina según distintas fuentes (barriles)**
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-
-```
 
 
 #### Precio Mercado Interno de Gas Natural
 
 ```{r}
-precio_gas_plt <-  ggplot(data[ variable == variables[6], ],
+precio_gas_plt <-  ggplot(data[ variable == variables[8], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
   labs(title = "Gráfico 4. Precios del mercado interno del gas natural. Argentina (1963 - 2020)",
@@ -232,7 +201,7 @@ Precios de exportación desde Argentina, benchmarks y Precios del mercado de EEU
 ##### Precios de transacciones spot 
 
 ```{r}
-precio_ref_crudo_plt <-  ggplot(data[ variable == variables[7], ],
+precio_ref_crudo_plt <-  ggplot(data[ variable == variables[9], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
   labs(title = "Gráfico 4. Precios de referencia del mercado mundial del crudo (1946 - 2020)",
@@ -251,7 +220,7 @@ ggplotly(precio_ref_crudo_plt)  %>%
 ##### Precio de Exportación del Crudo
 
 ```{r}
-precio_expo_crudo_plt <-  ggplot(data[ variable == variables[8], ],
+precio_expo_crudo_plt <-  ggplot(data[ variable == variables[10], ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
   labs(title = "Gráfico #. Precios de exportacion de crudo. Argentina (1964 - 2020)",
@@ -298,7 +267,7 @@ ggplotly(brecha_precio_crudo_plt)  %>%
   
 ##### Precios de EEUU y Europa  
 ```{r}
-precio_ref_gas_plt <-  ggplot(data[ (variable %in% variables[9:25])&
+precio_ref_gas_plt <-  ggplot(data[ (variable %in% variables[11:27])&
                                            (!str_detect(variable, "GNL|LNG|OCDE|importación|exportación") ), ],
                           aes(anio, valor, color = variable))+
   geom_line(alpha = 0.8)+
@@ -319,7 +288,7 @@ ggplotly(precio_ref_gas_plt)  %>%
 
 
 ```{r}
-precio_ref_gas_plt_2 <-  ggplot(data[ (variable %in% variables[9:25])&
+precio_ref_gas_plt_2 <-  ggplot(data[ (variable %in% variables[11:27])&
                                            (!str_detect(variable, "GNL|LNG|OCDE") )&
                                       (str_detect(variable, "importación|exportación") ), ],
                           aes(anio, valor, color = variable))+
@@ -340,7 +309,7 @@ ggplotly(precio_ref_gas_plt_2)  %>%
 
 ##### Precio de Exportación del Gas Natural
 ```{r}
-precio_expo_gas_plt <-  ggplot(data[ (variable %in% variables[31]) , ],
+precio_expo_gas_plt <-  ggplot(data[ (variable %in% variables[33]) , ],
                           aes(anio, valor, color = fuente))+
   geom_line(alpha = 0.8)+
   labs(title = "Gráfico #. Precios de exportación del gas natural. Argentina (1962 - 2020)",
@@ -359,7 +328,7 @@ ggplotly(precio_expo_gas_plt)  %>%
 
 ##### Precio de Importación del Gas Natural
 ```{r}
-precio_impo_gas_plt <-  ggplot(data[ (variable %in% variables[26:30]) , ],
+precio_impo_gas_plt <-  ggplot(data[ (variable %in% variables[28:32]) , ],
                           aes(anio, valor, color = variable))+#, group =codigo_variable))+
   geom_line(alpha = 0.8 , aes(linetype = fuente))+
   labs(title = "Gráfico #. Precios de importación del gas natural. Argentina (1962 - 2020)",
@@ -400,7 +369,10 @@ ggplot(data[ variable == "Exportaciones de petróleo crudo" & unidad == "barrile
   theme(legend.position = "bottom", plot.caption = element_text(size = 7.5))+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
+```
 
+
+```{r}
 ggplot(data[ variable == "Exportaciones de petróleo crudo" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
@@ -430,7 +402,10 @@ ggplot(data[ variable == "Importaciones de petróleo crudo" & unidad == "barrile
   theme(legend.position = "bottom", plot.caption = element_text(size = 7.5))+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
+```
 
+
+```{r}
 ggplot(data[ variable == "Importaciones de petróleo crudo" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
@@ -461,8 +436,10 @@ ggplotly(ggplot(data[ variable == "Exportaciones de gas natural" & unidad == "MM
   theme(legend.position = "bottom", plot.caption = element_text(size = 7.5))+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10)))
+```
 
 
+```{r}
 ggplot(data[ variable == "Exportaciones de gas natural" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
@@ -490,7 +467,10 @@ ggplot(data[ variable == "Importaciones de gas natural" & unidad == "MMBTU", ],
   theme(legend.position = "bottom", plot.caption = element_text(size = 7.5))+
   scale_y_continuous(labels = scales::unit_format(unit ="", scale = 1e-6))+
   scale_x_continuous(breaks = seq(1910, 2030, by = 10))
+```
 
+
+```{r}
 ggplot(data[ variable == "Importaciones de gas natural" & unidad == "USD", ],
                           aes(anio, valor, color = fuente))+
   geom_line()+
